# openbiometrics

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  mprocs.yaml  package.json  pnpm-lock.yaml  turbo.json
.github/workflows/: claude-code-review.yml  deploy-docs.yml
api/: Dockerfile  Dockerfile.jetson  pyproject.toml
api/app/: deps.py  main.py  routes.py  schemas.py
api/app/routes/: __init__.py  admin.py  documents.py  events.py  faces.py  liveness.py  video.py  watchlists.py
engine/: download_models.py  pyproject.toml
engine/openbiometrics/: __init__.py  config.py  kernel.py
engine/openbiometrics/core/: demographics.py  detector.py  liveness.py  pipeline.py  quality.py  recognizer.py
engine/openbiometrics/document/: __init__.py  detector.py  mrz.py  ocr.py  pipeline.py
engine/openbiometrics/events/: __init__.py  bus.py  types.py  webhooks.py
engine/openbiometrics/identity/: __init__.py  clustering.py  resolver.py
engine/openbiometrics/liveness/: __init__.py  challenges.py  detector.py  landmarks.py  presets.py  session.py
engine/openbiometrics/person/: __init__.py  counter.py  detector.py  tracker.py
engine/openbiometrics/runtime/: __init__.py  registry.py  session.py
engine/openbiometrics/video/: __init__.py  manager.py  stream.py
engine/openbiometrics/watchlist/: store.py
scripts/: bump-version.sh
sdks/python/: pyproject.toml
sdks/python/openbiometrics_sdk/: __init__.py  client.py
tests/: integration.py
