[project]
name = "openbiometrics"
version = "0.1.0"
description = "OpenBiometrics Python SDK — face recognition, liveness, and biometric verification"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
